--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "craco-alias": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-particles": "^2.9.3",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
+    "tsparticles": "^2.9.3",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.0"
   },
