--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/react-router-dom": "^5.3.3",
     "craco": "^0.0.3",
     "craco-alias": "^3.0.1",
+    "firebase": "^9.17.1",
+    "jquery": "^3.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-particles": "^2.9.3",
@@ -48,5 +50,8 @@
       "last 1 safari version"
     ]
   },
-  "cracoConfig": "./craco.config.js"
+  "cracoConfig": "./craco.config.js",
+  "devDependencies": {
+    "@types/jquery": "^3.5.16"
+  }
 }
